[gd_scene load_steps=5 format=3 uid="uid://c425npey2td8r"]

[ext_resource type="Script" path="res://src/Tools/DragTool.gd" id="1_6o71y"]
[ext_resource type="Texture2D" uid="uid://cup3soykni6v5" path="res://assets/Tools/Tools_hand_open.png" id="2_j245t"]
[ext_resource type="Texture2D" uid="uid://dxkqbfbwhdnoi" path="res://assets/Tools/Tools_hand_closed.png" id="3_p4dls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wpl1s"]
radius = 24.0832

[node name="DragTool" type="Node2D" node_paths=PackedStringArray("openSprite", "closedSprite")]
script = ExtResource("1_6o71y")
openSprite = NodePath("Open")
closedSprite = NodePath("Close")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wpl1s")

[node name="Open" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_j245t")

[node name="Close" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_p4dls")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
